--- a/Proyect/css/styles.css
+++ b/Proyect/css/styles.css
@@ -37,8 +37,8 @@ nav {
   justify-content: flex-start;
 }
 #linkLogo {
-  height: 10%;
-  width: 7%;
+  height: 100%;
+  width: 10%;
 }
 #imgLogoNav {
   height: 100%;
@@ -62,6 +62,16 @@ nav {
   color: white;
   text-shadow: black 0.1em 0.1em 0.2em;
 }
+
+/*Empieza hamburguesa*/
+.div-svgBars-input-checkBox {
+  cursor: pointer;
+}
+#check {
+  display: none;
+}
+/*Termina hamburgesa*/
+
 .presentacion {
   height: 255px;
   background-color: rgba(191, 191, 191, 0.75);
@@ -128,4 +138,12 @@ nav {
   color: white;
   font-size: 15px;
   text-shadow: black 0.1em 0.1em 0.2em;
+}
+
+/*Media query hamburguesa*/
+@media (max-width: 575.98px) {
+  #check {
+    display: block;
+    cursor: pointer;
+  }
 }
