--- a/Proyect 2 Clase 10/css/style.css
+++ b/Proyect 2 Clase 10/css/style.css
@@ -7,35 +7,45 @@
 }
 
 html {
-  background-color: rgba(217, 211, 204, 0.8);
+  background-color: #dbe4f4;
 }
 
 body {
-  font-family: "Gentium Book Plus", serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   font-style: normal;
 }
 
 header {
-  background-color: rgb(172, 172, 172);
+  background-color: cornflowerblue;
   width: 100vw;
 }
 
 nav {
+  height: 50px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
+/*=========NAVBAR============== */
+.div-fifa-nav-logo {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
 .fifa-nav-logo {
-  width: 140px;
-  height: auto;
+  width: auto;
+  height: 100%;
   margin-left: 10px;
-  margin-right: 50px;
+  margin-right: 10px;
 }
 
 nav ul {
   display: flex;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  justify-content: space-evenly;
 }
 
 nav ul li {
@@ -56,8 +66,11 @@ nav ul li a {
 }
 
 .bar-search-div {
+  width: 100%;
+  height: 100%;
   display: flex;
-  width: 5em;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 #searchInput {
@@ -71,7 +84,72 @@ nav ul li a {
 
 #checkbox-input-navbar-mediaquery {
   display: none;
+  position: fixed;
 }
 #bars-navbar-mediaquery {
   display: none;
+  position: fixed;
+}
+/*=========HERO=========*/
+.hero-section {
+  position: relative;
+  width: 100%;
+  height: calc(100vh - 50px);
+  background-color: cornflowerblue;
+  background-size: cover;
+  background-position: center;
+  transition: all 0.3s ease-in-out;
+  animation: heroAnimacionImagenes 10s infinite linear;
+}
+.hero-article-content {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  color: black;
+  background-color: rgb(16 17 30 / 57%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.hero-article-content h1 {
+  font-size: 40px;
+  color: white;
+  text-shadow: -2px 3px 6px rgba(0, 0, 0, 0.82);
+  padding-bottom: 15px;
+}
+.hero-article-content p {
+  font-size: 20px;
+  color: white;
+  text-shadow: -2px 3px 6px rgba(0, 0, 0, 0.82);
+  padding-bottom: 15px;
+}
+.hero-article-content a {
+  font-size: 20px;
+  color: white;
+  text-shadow: -2px 3px 6px rgba(0, 0, 0, 0.82);
+  padding: 4px 9px 4px 9px;
+  border-color: 1mm;
+  border-style: solid;
+  border-width: 2px 2px 2px 2px;
+}
+.hero-article-content a:hover {
+  background-color: white;
+  color: black;
+}
+@keyframes heroAnimacionImagenes {
+  0% {
+    background-image: url(../assets/img/fifa-hero-body.jpeg);
+  }
+  50% {
+    background-image: url(../assets/img/fifa-hero-body.jpeg);
+  }
+
+  51% {
+    background-image: url(../assets/img/fifa-hero-body-2.jpeg);
+  }
+  100% {
+    background-image: url(../assets/img/fifa-hero-body-2.jpeg);
+  }
 }
