--- a/challenge1Nucba/css/style.css
+++ b/challenge1Nucba/css/style.css
@@ -4,13 +4,18 @@
   box-sizing: border-box;
   font-family: sans-serif;
 }
+:root {
+  --naranjaColor: #ed6755;
+  --whiteColor: #ffffff;
+  --blueColor: #2c3e50;
+}
 .svg-x {
   width: 100%;
   display: flex;
   justify-content: flex-end;
 }
 .card-1 {
-  background-color: #ffffff;
+  background-color: var(--whiteColor);
   height: 399px;
   width: 432px;
   display: flex;
@@ -26,13 +31,43 @@ p {
   margin-bottom: 20px;
 }
 #button-input-eso-esta-bien {
-  background-color: #ed6755;
+  background-color: var(--naranjaColor);
   font-size: 25px;
-  color: white;
-  border-color: #ed6755;
+  color: var(--whiteColor);
+  border-color: var(--naranjaColor);
   border-radius: 4px;
-  -webkit-box-shadow: 1px 19px 29px -10px rgba(237, 103, 85, 0.67);
-  box-shadow: 1px 19px 29px -10px rgba(237, 103, 85, 0.67);
+  -webkit-box-shadow: 1px 19px 29px -10px var(--naranjaColor);
+  box-shadow: 1px 19px 29px -10px var(--naranjaColor);
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  cursor: pointer;
+}
+/* card 2 */
+.card-2 {
+  background-color: var(--whiteColor);
+  height: 399px;
+  width: 432px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 26px;
+  text-align: center;
+}
+#p-card2 {
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+#button-input-ampliar-sesión {
+  background-color: var(--blueColor);
+  font-size: 25px;
+  color: var(--whiteColor);
+  border-color: var(--blueColor);
+  border-radius: 4px;
+  -webkit-box-shadow: 1px 19px 29px -10px var(--blueColor);
+  box-shadow: 1px 19px 29px -10px var(--blueColor);
   padding-left: 35px;
   padding-right: 35px;
   padding-top: 10px;
