--- a/Proyect 2 Clase 10/css/style.css
+++ b/Proyect 2 Clase 10/css/style.css
@@ -16,12 +16,14 @@ body {
 }
 
 header {
+  display: flex;
   background-color: cornflowerblue;
-  width: 100vw;
+  width: 100%;
+  min-height: 30px;
 }
 
 nav {
-  height: 50px;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,12 +32,11 @@ nav {
 /*=========NAVBAR============== */
 .div-fifa-nav-logo {
   display: flex;
-  width: 100%;
-  height: 100%;
+  align-items: center;
 }
 .fifa-nav-logo {
   width: auto;
-  height: 100%;
+  height: 50px;
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -43,36 +44,42 @@ nav {
 nav ul {
   display: flex;
   align-items: center;
-  width: 100%;
-  height: 100%;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 nav ul li {
-  display: grid;
-  justify-items: center;
+  font-size: 20px;
+  display: inline-block;
   margin-left: 25px;
   margin-top: 6px;
   margin-right: 25px;
   margin-bottom: 6px;
+  font-weight: 600;
 }
 
 nav ul li a {
   color: black;
   text-transform: uppercase;
 }
-
+a#active,
+ul li:hover {
+  background: rgb(255, 255, 255);
+  transition: 0.5s;
+  border-radius: 6px;
+}
+#active:hover {
+  color: white;
+  background: black;
+}
 .fa-arrow-down {
   padding-left: 5px;
   cursor: pointer;
 }
 
 .bar-search-div {
-  width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 #searchInput {
@@ -86,15 +93,18 @@ nav ul li a {
 
 #checkbox-input-navbar-mediaquery {
   display: none;
-  position: fixed;
 }
-#bars-navbar-mediaquery {
+.label-checkbox-input-mediaquery {
+  font-size: 30px;
+  color: black;
+  float: right;
+  line-height: 50px;
+  margin-right: 40px;
+  cursor: pointer;
   display: none;
-  position: fixed;
 }
 /*=========HERO=========*/
 .hero-section {
-  position: relative;
   width: 100%;
   height: calc(100vh - 50px);
   background-color: cornflowerblue;
@@ -115,11 +125,12 @@ nav ul li a {
   justify-content: center;
   flex-direction: column;
 }
-.hero-article-content h1 {
+.title-hero-h1 {
   font-size: 40px;
   color: white;
   text-shadow: -2px 3px 6px rgba(0, 0, 0, 0.82);
   padding-bottom: 15px;
+  font-weight: 600;
 }
 .hero-article-content p {
   font-size: 20px;
@@ -153,5 +164,69 @@ nav ul li a {
   }
   100% {
     background-image: url(../assets/img/fifa-hero-body-2.jpeg);
+  }
+}
+@media (max-width: 1100px) {
+  .title-hero-h1 {
+    font-size: 35px;
+  }
+  nav ul li {
+    font-size: 14px;
+  }
+  .hero-article-content p {
+    font-size: 16px;
+  }
+}
+@media (max-width: 770px) {
+  .fifa-nav-logo {
+    height: 40px;
+  }
+  nav ul li {
+    font-size: 11px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .bar-search-div {
+    height: 30px;
+  }
+
+  #searchInput {
+    font-size: 12px;
+  }
+  .label-search-input {
+    font-size: 16px;
+  }
+  .title-hero-h1 {
+    font-size: 30px;
+  }
+  .hero-article-content p {
+    font-size: 16px;
+  }
+}
+@media (max-width: 769.98px) {
+  .label-checkbox-input-mediaquery {
+    display: block;
+  }
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: cornflowerblue;
+    top: 50px;
+    left: 10%;
+    text-align: center;
+    transition: all 0.5s;
+  }
+  nav ul li {
+    display: block;
+  }
+  nav ul li a {
+    font-size: 20px;
+  }
+  #checkbox-input-navbar-mediaquery:checked ~ nav ul {
+    left: 0;
   }
 }
