--- a/proyect 3/css/style.css
+++ b/proyect 3/css/style.css
@@ -120,6 +120,8 @@ header {
   text-shadow: -2px 3px 6px rgba(0, 0, 0, 0.82);
   padding-bottom: 15px;
   text-align: center;
+  margin-right: 15px;
+  margin-left: 15px;
 }
 .hero-article-content a {
   font-size: 20px;
