--- a/proyect4/css/style.css
+++ b/proyect4/css/style.css
@@ -150,6 +150,10 @@ nav ul li a:hover {
   justify-content: space-evenly;
 }
 .container__card-flex {
+  background-color: #a4a3ad87;
+  border-radius: 30px;
+  outline: none;
+  border: 2px solid;
   display: flex;
   margin-right: 5%;
   margin-left: 5%;
@@ -160,9 +164,10 @@ nav ul li a:hover {
 }
 /* -------------Centrado de imagen en card y redimension de container de imagen------------- */
 .container__img-center {
+  display: flex;
+  align-items: center;
   width: 300px;
   height: 300px;
-  text-align: center;
 }
 /* -------------Redimension imagenes------------- */
 #img-ZB-png {
@@ -178,9 +183,42 @@ nav ul li a:hover {
   height: auto;
 }
 /* -------------Modificacion texto cards------------- */
-.Container__h2Card-style{
-  
+.Container__h2Card-style {
+  font-size: 25px;
+  font-weight: bold;
 }
-.Container__text-style{
-
+.Container__h2Card-style:hover {
+  font-size: 27px;
+  font-weight: bold;
+  border: 2px solid var(--color-black);
+  background-color: rgb(255, 255, 255);
+  padding: 2px 10%;
+  transition: all 0.2s;
+}
+.Container__text-style {
+  text-align: center;
+  font-size: 18px;
+}
+@media (max-width: 580px) {
+  .bars-button {
+    display: block;
+  }
+  .fa-bars {
+    margin: 0 5rem;
+  }
+  .list__nav-links {
+    background-color: var(--primary-backround-color);
+    width: 100%;
+    height: calc(100vh - 80px);
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    flex-direction: column;
+    transform: translateX(100%);
+    align-items: center;
+    transition: all 0.5s;
+  }
+  #btn-input:checked ~ .list__nav-links {
+    left: 0;
+  }
 }
